--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,13 @@ body {
   align-items: center;
 }
 
+a {
+  text-decoration: none;
+}
+a:hover {
+  color: #f31559;
+}
+
 .header {
   width: 100%;
   background-color: #a0c49d;
@@ -41,6 +48,7 @@ body {
 
 .description {
   font-size: 2rem;
+  text-align: center;
 }
 
 .numberInput {
